--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -26,6 +26,27 @@
         "timeout": "以下進程未能在規定時間內關閉: {pids}",
         "error": "關閉 Cursor 進程時發生錯誤: {error}"
     },
+    "reset": {
+        "title": "Cursor 機器標識重置工具",
+        "checking": "檢查配置文件",
+        "not_found": "配置文件未找到",
+        "no_permission": "無法讀取或寫入配置文件，請檢查文件權限",
+        "reading": "讀取當前配置",
+        "creating_backup": "創建配置備份",
+        "backup_exists": "備份文件已存在，跳過備份步驟",
+        "generating": "生成新機器標識",
+        "saving_json": "保存新配置到JSON",
+        "success": "機器標識重置成功",
+        "new_id": "新機器標識",
+        "permission_error": "權限錯誤: {error}",
+        "run_as_admin": "請嘗試以管理員身份運行此程序",
+        "process_error": "重置進程錯誤: {error}",
+        "updating_sqlite": "更新SQLite數據庫",
+        "updating_pair": "更新鍵值對",
+        "sqlite_success": "SQLite數據庫更新成功",
+        "sqlite_error": "SQLite數據庫更新失敗: {error}",
+        "press_enter": "按回車鍵退出"
+    },
     "register": {
         "title": "Cursor 註冊工具",
         "start": "開始註冊流程",
