--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -11,7 +11,8 @@
         "invalid_choice": "無效選擇，請重試",
         "program_terminated": "程序被用戶終止",
         "error_occurred": "發生錯誤: {error}",
-        "press_enter": "按回車鍵退出"
+        "press_enter": "按回車鍵退出",
+        "disable_auto_update": "禁用 Cursor 自動更新"
     },
     "languages": {
         "en": "English",
@@ -193,6 +194,18 @@
         "verification_code_not_found": "未找到驗證碼",
         "verification_code_error": "驗證碼錯誤: {error}",
         "address": "郵箱地址"
-    }   
-
+    },
+    "update": {
+        "title": "禁用 Cursor 自动更新",
+        "disable_success": "自動更新禁用成功",
+        "disable_failed": "禁用自動更新失敗: {error}",
+        "press_enter": "按回車鍵退出",
+        "start_disable": "開始禁用自動更新",
+        "killing_processes": "殺死進程",
+        "processes_killed": "進程已殺死",
+        "removing_directory": "刪除目錄",
+        "directory_removed": "目錄已刪除",
+        "creating_block_file": "創建阻止文件",
+        "block_file_created": "阻止文件已創建"
+    }
 } 
