--- a/locales/en.json
+++ b/locales/en.json
@@ -2,17 +2,17 @@
     "menu": {
         "title": "Available Options",
         "exit": "Exit Program",
-        "reset": "Reset Machine Manual",
-        "register": "Register Cursor",
-        "register_manual": "Register Cursor With Manual Email",
-        "quit": "Quit Cursor",
-        "select_language": "Select Language",
-        "input_choice": "Enter your choice ({choices})",
-        "invalid_choice": "Invalid choice. Please try again",
-        "program_terminated": "Program terminated by user",
-        "error_occurred": "An error occurred: {error}",
+        "reset": "Reset Machine ID",
+        "register": "Register New Cursor Account",
+        "register_manual": "Register Cursor with Custom Email",
+        "quit": "Close Cursor Application",
+        "select_language": "Change Language",
+        "input_choice": "Please enter your choice ({choices})",
+        "invalid_choice": "Invalid selection. Please enter a number from {choices}",
+        "program_terminated": "Program was terminated by user",
+        "error_occurred": "An error occurred: {error}. Please try again",
         "press_enter": "Press Enter to Exit",
-        "disable_auto_update": "Disable Cursor Auto Update"
+        "disable_auto_update": "Disable Cursor Auto-Update"
     },
     "languages": {
         "en": "English",
@@ -68,21 +68,21 @@
     },
     "register": {
         "title": "Cursor Registration Tool",
-        "start": "Starting Registration Process",
-        "handling_turnstile": "Handling Turnstile",
-        "retry_verification": "Retry Verification",
-        "detect_turnstile": "Detect Turnstile",
-        "verification_success": "Verification Success",
-        "starting_browser": "Starting Browser",
-        "form_success": "Form Success",
-        "browser_started": "Browser Started",
-        "waiting_for_second_verification": "Waiting for Second Verification",
-        "waiting_for_verification_code": "Waiting for Verification Code",
-        "password_success": "Password Set Successfully",
-        "password_error": "Password Set Failed: {error}",
-        "waiting_for_page_load": "Waiting for Page Load",
-        "first_verification_passed": "First Verification Passed",
-        "mailbox": "Successfully Entered Mailbox",
+        "start": "Starting registration process...",
+        "handling_turnstile": "Processing security verification...",
+        "retry_verification": "Retrying verification...",
+        "detect_turnstile": "Checking security verification...",
+        "verification_success": "Security verification successful",
+        "starting_browser": "Opening browser...",
+        "form_success": "Form submitted successfully",
+        "browser_started": "Browser opened successfully",
+        "waiting_for_second_verification": "Waiting for email verification...",
+        "waiting_for_verification_code": "Waiting for verification code...",
+        "password_success": "Password set successfully",
+        "password_error": "Could not set password: {error}. Please try again",
+        "waiting_for_page_load": "Loading page...",
+        "first_verification_passed": "Initial verification successful",
+        "mailbox": "Successfully accessed email inbox",
         "register_start": "Start Register",
         "form_submitted": "Form Submitted, Start Verification...",
         "filling_form": "Fill Form",
@@ -145,7 +145,10 @@
         "database_connection_closed": "Database Connection Closed",
         "database_updated_successfully": "Database Updated Successfully",
         "connected_to_database": "Connected to Database",
-        "updating_pair": "Updating Key-Value Pair"
+        "updating_pair": "Updating Key-Value Pair",
+        "db_not_found": "Database file not found at: {path}",
+        "db_permission_error": "Cannot access database file. Please check permissions",
+        "db_connection_error": "Failed to connect to database: {error}"
     },
     "control": {
         "generate_email": "Generating New Email",
@@ -182,7 +185,7 @@
     },
     "email": {
         "starting_browser": "Starting Browser",
-        "visiting_site": "Visiting smailpro.com",
+        "visiting_site": "Visiting mail.tm",
         "create_success": "Email Created Successfully",
         "create_failed": "Failed to Create Email",
         "create_error": "Email Creation Error: {error}",
