--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -1,18 +1,18 @@
 {
     "menu": {
         "title": "可用選項",
-        "exit": "退出程序",
-        "reset": "重置機器標識",
-        "register": "註冊 Cursor",
-        "register_manual": "手動指定郵箱註冊 Cursor",
-        "quit": "退出 Cursor",
-        "select_language": "選擇語言",
-        "input_choice": "輸入選擇 ({choices})",
-        "invalid_choice": "無效選擇，請重試",
-        "program_terminated": "程序被用戶終止",
-        "error_occurred": "發生錯誤: {error}",
-        "press_enter": "按回車鍵退出",
-        "disable_auto_update": "禁用 Cursor 自動更新"
+        "exit": "退出程式",
+        "reset": "重置機器識別碼",
+        "register": "註冊新 Cursor 帳號",
+        "register_manual": "使用自訂郵箱註冊",
+        "quit": "關閉 Cursor 應用程式",
+        "select_language": "變更語言",
+        "input_choice": "請輸入您的選擇 ({choices})",
+        "invalid_choice": "選擇無效，請輸入 {choices} 範圍內的數字",
+        "program_terminated": "程式已被使用者終止",
+        "error_occurred": "發生錯誤：{error}，請重試",
+        "press_enter": "按返回鍵退出",
+        "disable_auto_update": "停用 Cursor 自動更新"
     },
     "languages": {
         "en": "English",
@@ -68,17 +68,24 @@
     },
     "register": {
         "title": "Cursor 註冊工具",
-        "start": "開始註冊流程",
-        "mailbox": "成功進入郵箱",
-        "browser_started": "瀏覽器已啟動",
-        "waiting_for_page_load": "等待頁面加載",
-        "password_success": "密碼設置完成",
-        "password_error": "密碼設置失敗: {error}",
+        "start": "正在啟動註冊流程...",
+        "handling_turnstile": "正在處理安全驗證...",
+        "retry_verification": "正在重試驗證...",
+        "detect_turnstile": "正在檢查安全驗證...",
+        "verification_success": "安全驗證通過",
+        "starting_browser": "正在開啟瀏覽器...",
+        "form_success": "表單提交成功",
+        "browser_started": "瀏覽器已成功開啟",
+        "waiting_for_second_verification": "等待郵箱驗證...",
+        "waiting_for_verification_code": "等待驗證碼...",
+        "password_success": "密碼設定成功",
+        "password_error": "無法設定密碼：{error}，請重試",
+        "waiting_for_page_load": "頁面載入中...",
+        "first_verification_passed": "初始驗證通過",
+        "mailbox": "已成功存取郵箱",
         "visiting_url": "訪問URL",
-        "first_verification_passed": "第一階段驗證通過",
         "register_start": "開始註冊流程",
         "form_submitted": "表單已提交，開始驗證...",
-        "waiting_for_second_verification": "等待第二階段驗證",
         "filling_form": "填寫註冊信息",
         "basic_info": "基本信息提交完成",
         "handle_turnstile": "處理 Turnstile 驗證",
@@ -86,31 +93,6 @@
         "turnstile_passed": "驗證通過",
         "verification_start": "開始獲取驗證碼",
         "waiting_for_verification_code": "等待驗證碼",
-        "handling_turnstile": "處理 Turnstile 驗證",
-        "retry_verification": "重試驗證",
-        "detect_turnstile": "檢測 Turnstile 驗證",
-        "verification_success": "驗證成功",
-        "starting_browser": "啟動瀏覽器",
-        "form_success": "表單提交成功",
-        "verification_timeout": "獲取驗證碼超時",
-        "verification_not_found": "未找到驗證碼",
-        "try_get_code": "第 {attempt} 次嘗試獲取驗證碼 | 剩餘時間: {time}秒",
-        "get_account": "獲取賬戶信息",
-        "get_token": "獲取 Cursor Session Token",
-        "token_success": "Token 獲取成功",
-        "token_attempt": "第 {attempt} 次嘗試未獲取到 Token，{time}秒後重試",
-        "token_max_attempts": "已達到最大嘗試次數({max})，獲取 Token 失敗",
-        "token_failed": "獲取 Token 失敗: {error}",
-        "account_error": "獲取賬戶信息失敗: {error}",
-        "press_enter": "按回車鍵退出",
-        "browser_start": "正在啟動瀏覽器",
-        "open_mailbox": "正在打開郵箱頁面",
-        "email_error": "獲取郵箱地址失敗",
-        "setup_error": "郵箱設置出錯: {error}",
-        "start_getting_verification_code": "開始獲取驗證碼，將在60秒內嘗試...",
-        "get_verification_code_timeout": "獲取驗證碼超時",
-        "get_verification_code_success": "成功獲取驗證碼",
-        "try_get_verification_code": "第 {attempt} 次嘗試未獲取到驗證碼，剩餘時間: {remaining_time}秒",
         "verification_code_filled": "驗證碼填寫完成",
         "login_success_and_jump_to_settings_page": "成功登錄並跳轉到設置頁面",
         "detect_login_page": "檢測到登錄頁面，開始登錄...",
@@ -144,7 +126,10 @@
         "connected_to_database": "已連接到數據庫",
         "database_updated_successfully": "數據庫更新成功",
         "database_connection_closed": "數據庫連接已關閉",
-        "updating_pair": "更新鍵值對"
+        "updating_pair": "更新鍵值對",
+        "db_not_found": "未找到數據庫文件：{path}",
+        "db_permission_error": "無法訪問數據庫文件，請檢查權限",
+        "db_connection_error": "連接數據庫失敗：{error}"
     },
     "control": {
         "generate_email": "生成新郵箱",
@@ -179,7 +164,7 @@
     },
     "email": {
         "starting_browser": "啟動瀏覽器",
-        "visiting_site": "訪問 smailpro.com",
+        "visiting_site": "訪問 mail.tm",
         "create_success": "郵箱創建成功",
         "create_failed": "郵箱創建失敗",
         "create_error": "郵箱創建錯誤: {error}",
