--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -3,14 +3,14 @@
         "title": "可用选项",
         "exit": "退出程序",
         "reset": "重置机器标识",
-        "register": "注册 Cursor",
-        "register_manual": "手动指定邮箱注册 Cursor",
-        "quit": "退出 Cursor",
-        "select_language": "选择语言",
-        "input_choice": "输入选择 ({choices})",
-        "invalid_choice": "无效选择，请重试",
-        "program_terminated": "程序被用户终止",
-        "error_occurred": "发生错误: {error}",
+        "register": "注册新 Cursor 账号",
+        "register_manual": "使用自定义邮箱注册",
+        "quit": "关闭 Cursor 应用",
+        "select_language": "更改语言",
+        "input_choice": "请输入您的选择 ({choices})",
+        "invalid_choice": "选择无效，请输入 {choices} 范围内的数字",
+        "program_terminated": "程序已被用户终止",
+        "error_occurred": "发生错误：{error}，请重试",
         "press_enter": "按回车键退出",
         "disable_auto_update": "禁用 Cursor 自动更新"
     },
@@ -68,25 +68,25 @@
     },
     "register": {
         "title": "Cursor 注册工具",
-        "start": "开始注册流程",
-        "browser_started": "浏览器已启动",
-        "password_success": "密码设置完成",
-        "password_error": "密码设置失败: {error}",
-        "waiting_for_page_load": "等待页面加载",
-        "mailbox": "成功进入邮箱",
-        "waiting_for_second_verification": "等待第二阶段验证",
-        "waiting_for_verification_code": "等待验证码",
-        "first_verification_passed": "第一阶段验证通过",
+        "start": "正在启动注册流程...",
+        "browser_started": "浏览器已成功打开",
+        "password_success": "密码设置成功",
+        "password_error": "无法设置密码：{error}，请重试",
+        "waiting_for_page_load": "页面加载中...",
+        "mailbox": "已成功访问邮箱",
+        "waiting_for_second_verification": "等待邮箱验证...",
+        "waiting_for_verification_code": "等待验证码...",
+        "first_verification_passed": "初始验证通过",
         "register_start": "开始注册流程",
         "form_submitted": "表单已提交，开始验证...",
         "filling_form": "填写注册信息",
         "visiting_url": "访问URL",
         "basic_info": "基本信息提交完成",
-        "handling_turnstile": "处理 Turnstile 验证",
-        "retry_verification": "重试验证",
-        "detect_turnstile": "检测 Turnstile 验证",
-        "verification_success": "验证成功",
-        "starting_browser": "启动浏览器",
+        "handling_turnstile": "正在处理安全验证...",
+        "retry_verification": "正在重试验证...",
+        "detect_turnstile": "正在检查安全验证...",
+        "verification_success": "安全验证通过",
+        "starting_browser": "正在打开浏览器...",
         "form_success": "表单提交成功",
         "handle_turnstile": "处理 Turnstile 验证",
         "no_turnstile": "未检测到 Turnstile 验证",
@@ -144,7 +144,10 @@
         "connected_to_database": "已连接到数据库",
         "database_updated_successfully": "数据库更新成功",
         "database_connection_closed": "数据库连接已关闭",
-        "updating_pair": "更新键值对"
+        "updating_pair": "更新键值对",
+        "db_not_found": "未找到数据库文件：{path}",
+        "db_permission_error": "无法访问数据库文件，请检查权限",
+        "db_connection_error": "连接数据库失败：{error}"
     },
     "control": {
         "generate_email": "生成新邮箱",
@@ -179,7 +182,7 @@
     },
     "email": {
         "starting_browser": "启动浏览器",
-        "visiting_site": "访问 smailpro.com",
+        "visiting_site": "访问 mail.tm",
         "create_success": "邮箱创建成功",
         "create_failed": "邮箱创建失败",
         "create_error": "邮箱创建错误: {error}",
