feat: Enhance Multilingual Support and System Language Detection
- Add automatic system language detection for Windows and Unix-like systems
- Update localization files with new translation keys
- Improve language handling in various modules
- Translate more UI messages to English
- Add GitHub link to logo display
- Bump version to 1.4.04

--- a/locales/en.json
+++ b/locales/en.json
@@ -64,7 +64,11 @@
         "patch_completed": "Patching getMachineId Completed",
         "patch_failed": "Patching getMachineId Failed: {error}",
         "version_check_passed": "Cursor Version Check Passed",
-        "file_modified": "File Modified"
+        "file_modified": "File Modified",
+        "version_less_than_0_45": "Cursor Version < 0.45.0, Skip Patching getMachineId",
+        "detecting_version": "Detecting Cursor Version",
+        "patching_getmachineid": "Patching getMachineId",
+        "version_greater_than_0_45": "Cursor Version >= 0.45.0, Patching getMachineId"
     },
     "register": {
         "title": "Cursor Registration Tool",
