feat: Enhance Temporary Email Service with Domain Blocking and Improved Error Handling
- Add domain blocking mechanism to filter out problematic email domains
- Implement dynamic domain list retrieval from external source
- Improve error handling and logging in email creation process
- Add fallback service switching when domains are blocked
- Update localization files with new error and blocking-related messages
- Increment version to 1.4.06

--- a/locales/en.json
+++ b/locales/en.json
@@ -203,7 +203,23 @@
         "verification_code_found": "Verification Code Found",
         "verification_code_not_found": "Verification Code Not Found",
         "verification_code_error": "Verification Code Error: {error}",
-        "address": "Email Address"
+        "address": "Email Address",
+        "all_domains_blocked": "All Domains Blocked, Switching Service",
+        "no_available_domains_after_filtering": "No Available Domains After Filtering",
+        "switching_service": "Switching to {service} Service",
+        "domains_list_error": "Failed to Get Domains List: {error}",
+        "failed_to_get_available_domains": "Failed to Get Available Domains",
+        "domains_excluded": "Domains Excluded: {domains}",
+        "failed_to_create_account": "Failed to Create Account",
+        "account_creation_error": "Account Creation Error: {error}",
+        "blocked_domains": "Blocked Domains: {domains}",
+        "blocked_domains_loaded": "Blocked Domains Loaded: {count}",
+        "blocked_domains_loaded_error": "Blocked Domains Loaded Error: {error}",
+        "blocked_domains_loaded_success": "Blocked Domains Loaded Successfully",
+        "blocked_domains_loaded_timeout": "Blocked Domains Loaded Timeout: {timeout}s",
+        "blocked_domains_loaded_timeout_error": "Blocked Domains Loaded Timeout Error: {error}",
+        "available_domains_loaded": "Available Domains Loaded: {count}",
+        "domains_filtered": "Domains Filtered: {count}"
     },
     "update": {
         "title": "Disable Cursor Auto Update",
