--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -181,7 +181,23 @@
         "verification_code_found": "找到驗證碼",
         "verification_code_not_found": "未找到驗證碼",
         "verification_code_error": "驗證碼錯誤: {error}",
-        "address": "郵箱地址"
+        "address": "郵箱地址",
+        "all_domains_blocked": "所有域名都被屏蔽了，切換服務",
+        "no_available_domains_after_filtering": "過濾後沒有可用域名",
+        "switching_service": "切換到 {service} 服務",
+        "domains_list_error": "獲取域名列表失敗: {error}",
+        "failed_to_get_available_domains": "獲取可用域名失敗",
+        "domains_excluded": "排除的域名: {domains}",
+        "failed_to_create_account": "創建帳戶失敗",
+        "account_creation_error": "帳戶創建錯誤: {error}",
+        "blocked_domains": "被屏蔽的域名: {domains}",
+        "blocked_domains_loaded": "加載被屏蔽的域名: {domains}",
+        "blocked_domains_loaded_error": "加載被屏蔽的域名失敗: {error}",
+        "blocked_domains_loaded_success": "加載被屏蔽的域名成功",
+        "blocked_domains_loaded_timeout": "加載被屏蔽的域名超時: {timeout}秒",
+        "blocked_domains_loaded_timeout_error": "加載被屏蔽的域名超時錯誤: {error}",
+        "available_domains_loaded": "獲取到 {count} 個可用域名",
+        "domains_filtered": "過濾後剩餘 {count} 個可用域名"
     },
     "update": {
         "title": "禁用 Cursor 自动更新",
