--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -200,7 +200,23 @@
         "verification_code_found": "找到验证码",
         "verification_code_not_found": "未找到验证码",
         "verification_code_error": "验证码错误: {error}",
-        "address": "邮箱地址"
+        "address": "邮箱地址",
+        "all_domains_blocked": "所有域名都被屏蔽了，切换服务",
+        "no_available_domains_after_filtering": "过滤后没有可用域名",
+        "switching_service": "切换到 {service} 服务",
+        "domains_list_error": "获取域名列表失败: {error}",
+        "failed_to_get_available_domains": "获取可用域名失败",
+        "blocked_domains_loaded": "加载了 {count} 个被屏蔽的域名",
+        "domains_excluded": "排除了 {domains} 个被屏蔽的域名",
+        "failed_to_create_account": "创建账户失败",
+        "account_creation_error": "账户创建错误: {error}",
+        "blocked_domains": "被屏蔽的域名: {domains}",
+        "blocked_domains_loaded_error": "加载被屏蔽的域名失败: {error}",
+        "blocked_domains_loaded_success": "加载被屏蔽的域名成功",
+        "blocked_domains_loaded_timeout": "加载被屏蔽的域名超时: {timeout}秒",
+        "blocked_domains_loaded_timeout_error": "加载被屏蔽的域名超时错误: {error}",
+        "available_domains_loaded": "获取到 {count} 个可用域名",
+        "domains_filtered": "过滤后剩餘 {count} 個可用域名"
     },
     "update": {
         "title": "禁用 Cursor 自动更新",
