feat: Add version update checker with GitHub release support

--- a/locales/en.json
+++ b/locales/en.json
@@ -233,5 +233,13 @@
         "directory_removed": "Directory Removed",
         "creating_block_file": "Creating Block File",
         "block_file_created": "Block File Created"
+    },
+    "updater": {
+        "checking": "Checking for updates...",
+        "new_version_available": "New version available! (Current: {current}, Latest: {latest})",
+        "updating": "Updating to the latest version. The program will restart automatically.",
+        "up_to_date": "You are using the latest version.",
+        "check_failed": "Failed to check for updates: {error}",
+        "continue_anyway": "Continuing with current version..."
     }
 }
