--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -230,5 +230,13 @@
         "directory_removed": "目录已删除",
         "creating_block_file": "创建阻止文件",
         "block_file_created": "阻止文件已创建"
+    },
+    "updater": {
+        "checking": "检查更新...",
+        "new_version_available": "有新版本可用! (当前版本: {current}, 最新版本: {latest})",
+        "updating": "正在更新到最新版本。程序将自动重启。",
+        "up_to_date": "您使用的是最新版本。",
+        "check_failed": "检查更新失败: {error}",
+        "continue_anyway": "继续使用当前版本..."
     }
 } 
